// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input clearable should change type when click 1`] = `
<Input
  clearable={true}
  size="md"
  type="text"
  width="100%"
>
  <div
    className="true-input__affix-wrapper"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      className="true-input true-input--md true-input--suffix"
      onChange={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
      type="text"
      value="111"
    />
    <span
      className="true-input__affix-wrapper--suffix"
    >
      <Icon
        onClick={[Function]}
        type="remove"
      >
        <i
          className="true-icon true-icon__remove"
          onClick={[Function]}
        />
      </Icon>
    </span>
  </div>
</Input>
`;

exports[`Input clearable should change type when click 2`] = `
<Input
  clearable={true}
  size="md"
  type="text"
  width="100%"
>
  <div
    className="true-input__affix-wrapper"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      className="true-input true-input--md true-input--suffix"
      onChange={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
      type="text"
      value=""
    />
  </div>
</Input>
`;

exports[`Input clearable should not show icon if defaultValue is undefined, null or empty string 1`] = `
<Input
  clearable={true}
  defaultValue={null}
  size="md"
  type="text"
  width="100%"
>
  <div
    className="true-input__affix-wrapper"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      className="true-input true-input--md true-input--suffix"
      onChange={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
      type="text"
      value=""
    />
  </div>
</Input>
`;

exports[`Input clearable should not show icon if defaultValue is undefined, null or empty string 2`] = `
<Input
  clearable={true}
  size="md"
  type="text"
  width="100%"
>
  <div
    className="true-input__affix-wrapper"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      className="true-input true-input--md true-input--suffix"
      onChange={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
      type="text"
      value=""
    />
  </div>
</Input>
`;

exports[`Input clearable should not show icon if defaultValue is undefined, null or empty string 3`] = `
<Input
  clearable={true}
  defaultValue=""
  size="md"
  type="text"
  width="100%"
>
  <div
    className="true-input__affix-wrapper"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      className="true-input true-input--md true-input--suffix"
      onChange={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
      type="text"
      value=""
    />
  </div>
</Input>
`;

exports[`Input clearable should not show icon if value is undefined, null or empty string 1`] = `
<Input
  clearable={true}
  size="md"
  type="text"
  value={null}
  width="100%"
>
  <div
    className="true-input__affix-wrapper"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      className="true-input true-input--md true-input--suffix"
      onChange={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
      type="text"
      value={null}
    />
  </div>
</Input>
`;

exports[`Input clearable should not show icon if value is undefined, null or empty string 2`] = `
<Input
  clearable={true}
  size="md"
  type="text"
  width="100%"
>
  <div
    className="true-input__affix-wrapper"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      className="true-input true-input--md true-input--suffix"
      onChange={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
      type="text"
    />
  </div>
</Input>
`;

exports[`Input clearable should not show icon if value is undefined, null or empty string 3`] = `
<Input
  clearable={true}
  size="md"
  type="text"
  value=""
  width="100%"
>
  <div
    className="true-input__affix-wrapper"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      className="true-input true-input--md true-input--suffix"
      onChange={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
      type="text"
      value=""
    />
  </div>
</Input>
`;

exports[`Input should support width 1`] = `
<Input
  size="md"
  type="text"
  width={456}
>
  <input
    className="true-input true-input--md"
    onChange={[Function]}
    style={
      Object {
        "width": 456,
      }
    }
    type="text"
    value=""
  />
</Input>
`;
